   is enabled, and lock down jury inferface also for non-GET/POST requests
   (Jeroen)
 - Fix racecondition in team password check (Stijn)
 - Improved two queries related to the verification of judgings (Stijn)
 - Improved mysql query performance (Jeroen & Peter)
 - Move .htaccess config to apache config (Jeroen)
 - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)

Version 2.1.1 - SVN
-------------------
 - Implement syslog logging (for PHP and shell scripts).
 - Fix typo in jury/submission.php causing a parse error when using
   PHP4 (Closes: #1808259, thanks mhil@fmf.nl).
 - Fix team unread clarification count to work cross-contest.
 - Update not the public, but the jury scoreboard after freeze.
 - Fix poblem colour input field to match its size in the database.
 - The colors of the problems are now shown in the jury problems overview
   (Closes: #1808308).
 - Improve contrast of default team category colours.
 - Some improvements to admin manual including submission diagram.

Version 2.1.0 - 5 September 2007
--------------------------------
 - Drop tempfile and mkstemps binaries, they are not necessary.
 - Change runguard license to GPL 2 or higher. The current code
   is a different implementation of the original idea from timeout.
 - Make shell scripts /bin/sh where possible, set them to bash
   where we rely on bash-specific features.
 - Fixes to judge/compare.c for better handling of strange newlines and
   printing first difference summary as first line.
 - Allow admins to rejudge PENDING/CORRECT submissions (Closes: #1766222).
 - Fix include test for Text_Highlighter to cope with missing PEAR.php.
 - Fix password generation for more than one team.
 - Fix test-logic bug in judge/check_program.sh: reversing judging outcomes.
 - Make warning and error beeps default to something more noticeable.
 - Let show_source cope with empty file submissions gracefully.
 - Abort startup of judgedaemon if processes of RUNUSER still found running.