@@ -11,6 +11,7 @@ Version 2.2.0 - SVN
  - Improved mysql query performance (Jeroen & Peter)
  - Move .htaccess config to apache config (Jeroen)
  - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)
+ - Moved beep system call to separate function in lib.misc.{c,php}.
 
 Version 2.1.1 - SVN
 -------------------
